syntax = "proto3";
package haiku.remote;

message MouseEvent {
    float x = 1;
    float y = 2;
    uint32 buttons = 3;
    float wheel_x = 4;
    float wheel_y = 5;
}

message KeyEvent {
    uint32 key_code = 1;
    bool down = 2;
    uint32 modifiers = 3;
    uint32 key_utf32 = 4;
    string key_string = 5;
}

message PingEvent {
    int64 timestamp = 1;
    int32 last_rtt = 2;
}

message ResolutionEvent {
    int32 width = 1;
    int32 height = 2;
}

message InputEvent {
    enum EventType {
        UNKNOWN = 0;
        MOUSE = 1;
        KEY = 2;
        PING = 3;
        RESOLUTION = 4;
        CODEC = 5;
        CLIPBOARD = 6;
    }

    EventType type = 1;

    MouseEvent mouse = 2;
    KeyEvent key = 3;
    PingEvent ping = 4;
    ResolutionEvent resolution = 5;
    CodecChangeEvent codec = 6;
    ClipboardEvent clipboard = 7;
}

message CodecChangeEvent {
    string codec = 1; // "vp8", "vp9", "av1"
}

message ClipboardEvent {
    string text = 1;
}

message InitMessage {
    int32 width = 1;
    int32 height = 2;
}
